--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-handlebars": "3.0",
     "mongodb": "^4.12.0",
+    "mongoose": "^6.7.3",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
     "sequelize": "^6.25.8"
