--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "3.0",
+    "express-session": "^1.17.3",
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.3",
     "mysql2": "^2.3.3",
