--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "express": "^4.18.2",
     "express-handlebars": "3.0",
     "express-session": "^1.17.3",
+    "mailtrap": "^3.0.1",
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.3",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "pug": "^3.0.2",
     "sequelize": "^6.25.8"
   }
