--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-handlebars": "3.0",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mailtrap": "^3.0.1",
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.3",
