--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mailtrap": "^3.0.1",
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "pug": "^3.0.2",
